nuevos cambios en los links

--- a/index.html
+++ b/index.html
@@ -4,24 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pre-entrega-2</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <title>Vencedores De Peros!</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
         <div class="container">
-            <a href="/index.html" class="logo">Vencedores De Peros!</a>
+            <a href="./index.html" class="logo">Vencedores De Peros!</a>
             <nav>
-                <a href="/pages/quienes-somos.html">Quienes Somos</a>
-                <a href="/pages/nuestras-salidas.html">Nuestras Salidas</a>
-                <a href="/pages/faq.html">FAQ</a>
-                <a href="/pages/contacto.html">Contacto</a>
+                <a href="./pages/quienes-somos.html">Quienes Somos</a>
+                <a href="./pages/nuestras-salidas.html">Nuestras Salidas</a>
+                <a href="./pages/faq.html">FAQ</a>
+                <a href="./pages/contacto.html">Contacto</a>
             </nav>
         </div>
     </header>
     <section id="hero">
         <h1>Visitá Mendoza<br>con los Mejores</h1>
-        <form action="/pages/nuestras-salidas.html">
+        <form action="./pages/nuestras-salidas.html">
             <button>ENTRÁ YA!</button>
         </form>
     </section>
