--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -5,17 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pre-entrega-2</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <header>
         <div class="container">
-            <a href="/index.html" class="logo">Vencedores De Peros!</a>
+            <a href="../index.html" class="logo">Vencedores De Peros!</a>
             <nav>
-                <a href="quienes-somos.html">Quienes Somos</a>
-                <a href="nuestras-salidas.html">Nuestras Salidas</a>
-                <a href="faq.html">FAQ</a>
-                <a href="contacto.html">Contacto</a>
+                <a href="./quienes-somos.html">Quienes Somos</a>
+                <a href="./nuestras-salidas.html">Nuestras Salidas</a>
+                <a href="./faq.html">FAQ</a>
+                <a href="./contacto.html">Contacto</a>
             </nav>
         </div>
     </header>
