--- a/pages/nuestras-salidas.html
+++ b/pages/nuestras-salidas.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vencedores De Peros!</title>
+    <title>Nuestras Salidas | Vencedores De Peros!</title>
     <link rel="stylesheet" href="../css/style.css">
+    <meta name="description" content="Trekkin, Escalada en mendoza, Turismo en Mendoza">
+    <meta name="author" content="Mauricio Calderon">
+    <meta name="copyright" content="Vencedores De Peros">
+    <script src="https://kit.fontawesome.com/eb496ab1a0.js"></script>
 </head>
 <body>
     <header>
@@ -26,71 +30,97 @@
             <div class="options">
                 <div class="carta">
                     <h3>Trekking</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus itaque, exercitationem eos nostrum provident cum neque facere rerum voluptas illo. Dolores nihil et eligendi voluptates voluptate vitae nobis, dolor facilis?</p>
+                    <p>Modalidad de excursionismo que consiste en recorrer a pie largas distancias o zonas determinadas, generalmente de media montaña y poco frecuentadas por el turismo convencional. Esta modalidad está disponible para todas las edades!</p>
                     <button>+Info</button>
                 </div>
                 <div class="carta">
                     <h3>Alta Montaña</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus itaque, exercitationem eos nostrum provident cum neque facere rerum voluptas illo. Dolores nihil et eligendi voluptates voluptate vitae nobis, dolor facilis?</p>
+                    <p>Normalmente, en este tipo de montañas podemos encontrar glaciares y nieves perpetuas, lo que aumenta la dificultad de las ascensiones. Está disponible para gente entre 18 a 60 años, con guiadas individuales y personalizadas.</p>
                     <button>+Info</button>
                 </div>
                 <div class="carta">
                     <h3>DJI VIDEOS</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus itaque, exercitationem eos nostrum provident cum neque facere rerum voluptas illo. Dolores nihil et eligendi voluptates voluptate vitae nobis, dolor facilis?</p>
+                    <p>Diseñado para los creadores que nunca dejan de viajar y vivir experiencias increíbles. En este apartado los guías tienen acceso a subir contenido de experiencias anteriores, puedes encontrar videos, imagenes y más aquí.</p>
                     <button>+Info</button>
                 </div>
                 <div class="carta">
                     <h3>Guía</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus itaque, exercitationem eos nostrum provident cum neque facere rerum voluptas illo. Dolores nihil et eligendi voluptates voluptate vitae nobis, dolor facilis?</p>
+                    <p>Nuestros guías de alta montaña, trekking, rappel, escalada y más. Son especializados en la escuela de guías de montaña, con hazañas increíbles, ellos no guiaran por ese camino de nieve o ese paso difícil para dejar atras los peros y los miedos.</p>
                     <button>+Info</button>
                 </div>
                 <div class="carta">
                     <h3>Mountain Bike</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus itaque, exercitationem eos nostrum provident cum neque facere rerum voluptas illo. Dolores nihil et eligendi voluptates voluptate vitae nobis, dolor facilis?</p>
+                    <p>Ciclismo de competición realizado en circuitos naturales a través de bosques por caminos angostos con cuestas empinadas, sacandote de la cabeza que el miedo y el peligro nunca existieron, solo a disfrutar de ese camino hermoso.</p>
                     <button>+Info</button>
                 </div>
                 <div class="carta">
                     <h3>Meditación En Montaña</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus itaque, exercitationem eos nostrum provident cum neque facere rerum voluptas illo. Dolores nihil et eligendi voluptates voluptate vitae nobis, dolor facilis?</p>
+                    <p>La meditación puede producir un estado de relajamiento profundo y una mente tranquila. Durante la meditación, concentras tu atención y eliminas el flujo de pensamientos estan llenando tu mente. Vení a disfrutar con nuestra profe Ana Laura Arevalo</p>
                     <button>+Info</button>
                 </div>
                 <div class="carta">
                     <h3>Muro De Escalada</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus itaque, exercitationem eos nostrum provident cum neque facere rerum voluptas illo. Dolores nihil et eligendi voluptates voluptate vitae nobis, dolor facilis?</p>
+                    <p>Es una pared que está diseñada especialmente para que las personas, por medio de un equipo especial puedan escalarla, ya sea con fines recreativos o deportivos. Disponible para niños y adultos!</p>
                     <button>+Info</button>
                 </div>
                 <div class="carta">
                     <h3>Rafting</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus itaque, exercitationem eos nostrum provident cum neque facere rerum voluptas illo. Dolores nihil et eligendi voluptates voluptate vitae nobis, dolor facilis?</p>
+                    <p>El descenso de ríos, conocido mundialmente como rafting, es una actividad deportiva y recreativa que consiste en recorrer el río en la dirección de la corriente (río abajo), por lo general sobre algún tipo de embarcación.</p>
                     <button>+Info</button>
                 </div>
                 <div class="carta">
                     <h3>Bungee & Puenting</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus itaque, exercitationem eos nostrum provident cum neque facere rerum voluptas illo. Dolores nihil et eligendi voluptates voluptate vitae nobis, dolor facilis?</p>
+                    <p>El bungee es un deporte que consiste en hacer un salto al vacío desde una considerable altura, generalmente con una conexión desde los tobillos a una cuerda elástica, que permite, primero, caer acelerando, luego amortigua la caída.</p>
                     <button>+Info</button>
                 </div>
                 <div class="carta">
                     <h3>Rapél</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus itaque, exercitationem eos nostrum provident cum neque facere rerum voluptas illo. Dolores nihil et eligendi voluptates voluptate vitae nobis, dolor facilis?</p>
+                    <p>En alpinismo, técnica de descenso rápido en paredes verticales mediante el deslizamiento por una cuerda enlazada al cuerpo. vení a hacerlo en las cascadas de Mendoza y a disfrutar de esa adrenalina.</p>
                     <button>+Info</button>
                 </div>
                 <div class="carta">
                     <h3>Cabalgata</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus itaque, exercitationem eos nostrum provident cum neque facere rerum voluptas illo. Dolores nihil et eligendi voluptates voluptate vitae nobis, dolor facilis?</p>
+                    <p>El propósito principal de la cabalgata es convivir con la naturaleza, usando al caballo como medio de transporte, ya que ayuda a moverse más rápidamente, es menos agotador, y por lo general es más fácil transitar por caminos complicados tales como ríos, montañas.</p>
                     <button>+Info</button>
                 </div>
                 <div class="carta">
                     <h3>Volcanes de La Payunia</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus itaque, exercitationem eos nostrum provident cum neque facere rerum voluptas illo. Dolores nihil et eligendi voluptates voluptate vitae nobis, dolor facilis?</p>
+                    <p>Con más de 800 volcanes, constituye uno de las parques volcánicos de mayor densidad y diversidad del planeta. Por esta razón y por su belleza paisajística, gran parte de la reserva integra un sitio propuesto como candidato a Patrimonio Mundial Natural.</p>
                     <button>+Info</button>
                 </div>
             </div>
             </div>
         </section>
 
-        <footer>
-            <div class="container">
-                <p>&copy; VencedoresDePeros 2023</p>
+        <footer class="pie-pagina">
+            <div class="grupo-1">
+                <div>
+                    <div class="box">
+                        <figure>
+                            <a href="#">
+                                <img src="../image/vecteezy_mountain_1206222.png" alt="">
+                            </a>
+                        </figure>
+                    </div>
+                <div class="grupo-2">
+                    <div class="box">
+                        <h2>VENCEDORES DE PEROS</h2>
+                        <p>Todos los derechos reservados a Mauricio Enrique Calderon Marzan y Ana Laura Arevalo, fundadores de Vencedores De Peros en 2006, en memoria del ex-guía fallecido, Mariano Galvan.</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <h2>SIGUENOS</h2>
+                    <div class="red-social">
+                        <a href="#" class="fa fa-facebook"></a>
+                        <a href="#" class="fa fa-instagram"></a>
+                        <a href="#" class="fa fa-twitter"></a>
+                        <a href="#" class="fa fa-youtube"></a>
+                    </div>
+                </div>
+            </div>
+            </div>
+            <div class="grupo-2">
+                <small>&copy;2023 <b>VencedoresDePeros</b> - Todos los derechos reservados</small>
             </div>
          </footer>
  </body>
