--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vencedores De Peros!</title>
+    <title>Quienes Somos | Vencedores De Peros!</title>
     <link rel="stylesheet" href="../css/style.css">
+    <meta name="description" content="Trekkin, Escalada en mendoza, Turismo en Mendoza">
+    <meta name="author" content="Mauricio Calderon">
+    <meta name="copyright" content="Vencedores De Peros">
+    <script src="https://kit.fontawesome.com/eb496ab1a0.js"></script>
 </head>
 <body>
     <header>
@@ -25,7 +29,7 @@
             <div class="img-container"></div>
             <div class="texto">
                 <h2>Somos <span class="color-acento">Vencedores de Peros!</span></h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate animi voluptas necessitatibus velit neque exercitationem ullam ipsam, numquam, officiis error odio illo vitae? Accusantium sapiente eius incidunt recusandae corporis repudiandae!</p>
+                <p>Es un grupo creado para salir a recorrer partes inclreíbles de Mendoza, especializado en montaña para gente de todas las edades, creando un espacio libre, seguro y disfrutable para todos/as. El fundador de esta empresa Mauricio Calderon, guía de alta montaña, con más de 20 años de experiencia, te invitamos a recorrer lo bonito de Mendoza.</p>
             </div>
         </section>
 
@@ -34,9 +38,35 @@
             <button>ENTRÁ YA!</button>
          </section>
 
-         <footer>
-            <div class="container">
-                <p>&copy; VencedoresDePeros 2023</p>
+         <footer class="pie-pagina">
+            <div class="grupo-1">
+                <div>
+                    <div class="box">
+                        <figure>
+                            <a href="#">
+                                <img src="../image/vecteezy_mountain_1206222.png" alt="">
+                            </a>
+                        </figure>
+                    </div>
+                <div class="grupo-2">
+                    <div class="box">
+                        <h2>VENCEDORES DE PEROS</h2>
+                        <p>Todos los derechos reservados a Mauricio Enrique Calderon Marzan y Ana Laura Arevalo, fundadores de Vencedores De Peros en 2006, en memoria del ex-guía fallecido, Mariano Galvan.</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <h2>SIGUENOS</h2>
+                    <div class="red-social">
+                        <a href="#" class="fa fa-facebook"></a>
+                        <a href="#" class="fa fa-instagram"></a>
+                        <a href="#" class="fa fa-twitter"></a>
+                        <a href="#" class="fa fa-youtube"></a>
+                    </div>
+                </div>
+            </div>
+            </div>
+            <div class="grupo-2">
+                <small>&copy;2023 <b>VencedoresDePeros</b> - Todos los derechos reservados</small>
             </div>
          </footer>
 </body>
