--- a/pages/nuestras-salidas.html
+++ b/pages/nuestras-salidas.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nuestras Salidas | Vencedores De Peros!</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="icon" href="../image/pngwing.com.ico">
     <meta name="description" content="Trekkin, Escalada en mendoza, Turismo en Mendoza">
     <meta name="author" content="Mauricio Calderon">
     <meta name="copyright" content="Vencedores De Peros">
@@ -93,15 +94,6 @@
         </section>
 
         <footer class="pie-pagina">
-            <div class="grupo-1">
-                <div>
-                    <div class="box">
-                        <figure>
-                            <a href="#">
-                                <img src="../image/vecteezy_mountain_1206222.png" alt="">
-                            </a>
-                        </figure>
-                    </div>
                 <div class="grupo-2">
                     <div class="box">
                         <h2>VENCEDORES DE PEROS</h2>
