--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quienes Somos | Vencedores De Peros!</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="icon" href="../image/pngwing.com.ico">
     <meta name="description" content="Trekkin, Escalada en mendoza, Turismo en Mendoza">
     <meta name="author" content="Mauricio Calderon">
     <meta name="copyright" content="Vencedores De Peros">
@@ -32,22 +33,13 @@
                 <p>Es un grupo creado para salir a recorrer partes inclreíbles de Mendoza, especializado en montaña para gente de todas las edades, creando un espacio libre, seguro y disfrutable para todos/as. El fundador de esta empresa Mauricio Calderon, guía de alta montaña, con más de 20 años de experiencia, te invitamos a recorrer lo bonito de Mendoza.</p>
             </div>
         </section>
-
+        
         <section id="entra-ya">
             <h2>¿Listo para salir a la montaña?</h2>
             <button>ENTRÁ YA!</button>
          </section>
 
          <footer class="pie-pagina">
-            <div class="grupo-1">
-                <div>
-                    <div class="box">
-                        <figure>
-                            <a href="#">
-                                <img src="../image/vecteezy_mountain_1206222.png" alt="">
-                            </a>
-                        </figure>
-                    </div>
                 <div class="grupo-2">
                     <div class="box">
                         <h2>VENCEDORES DE PEROS</h2>
