--- a/pages/faq.html
+++ b/pages/faq.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FAQ | Vencedores De Peros!</title>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>FAQ | Vencedores De Peros </title>
     <link rel="stylesheet" href="../css/style.css">
     <meta name="description" content="Trekkin, Escalada en mendoza, Turismo en Mendoza">
     <meta name="author" content="Mauricio Calderon">
     <meta name="copyright" content="Vencedores De Peros">
+    <link rel="icon" href="../image/pngwing.com.ico">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/eb496ab1a0.js"></script>
-</head>
-<body>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+  </head>
+  <body>
     <header>
         <div class="container">
             <a href="../index.html" class="logo">Vencedores De Peros!</a>
@@ -23,57 +25,138 @@
             </nav>
         </div>
     </header>
-    <article>
-        <section id="faq">
-            <div class="container-faq">
-                <h2>Preguntas Frecuentes</h2>
-                <h3>¿Que debo llevar?</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-                <h3>¿Hay algun riesgo?</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam, expedita.</p>
-                <h3>¿Cual es el rango de edad?</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-                <h3>¿Cual es la altura estimada?</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores vitae recusandae nulla placeat accusantium excepturi?</p>
-                <h3>¿Cuantas personas van?</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel nobis, odio doloremque eius error itaque soluta sapiente</p>
-                <h3>¿Cual es la mas alta la cual puedo asistir?</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam natus neque ipsum animi odio soluta, eligendi similique mollitia amet necessitatibus iste, tempore praesentium suscipit aspernatur eum beatae nobis excepturi! Fugiat!</p>
-            </div>
-            </section>
-        </article>
 
-
-        <footer class="pie-pagina">
-            <div class="grupo-1">
-                <div>
-                    <div class="box">
-                        <figure>
-                            <a href="#">
-                                <img src="../image/vecteezy_mountain_1206222.png" alt="">
-                            </a>
-                        </figure>
-                    </div>
-                <div class="grupo-2">
-                    <div class="box">
-                        <h2>VENCEDORES DE PEROS</h2>
-                        <p>Todos los derechos reservados a Mauricio Enrique Calderon Marzan y Ana Laura Arevalo, fundadores de Vencedores De Peros en 2006, en memoria del ex-guía fallecido, Mariano Galvan.</p>
-                    </div>
+<div class="faq">
+    <main class="vh-60 bg-light d-flex align-items-center">
+      <section class="h-75 container-sm mx-auto">
+          <h1 class="fs-5 text-primary text-center py-3">
+              ¿En que le podemos ayudar?
+          </h1>
+     
+          <div class="accordion accordion-flush" id="accordionFlushExample">
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="flush-headingOne">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                  <i class="bi bi-currency-dollar"></i>
+                    Medios de pago
+                  </button>
+                </h2>
+                <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                  <div class="accordion-body">
+                      <b>Mercado Pago</b> 
+                  <p>Al momento de pagar, la plataforma se encargará de verificar los datos correspondientes y acreditará el dinero de forma automática en tu cuenta virtual de Mercado Pago.</p>
+              <b>Transferencia Bancaria</b>
+                  <p>Rellenar los campos con el número de cuenta de destino, el importe, concepto y el nombre del beneficiario.</p>
+              <b>Criptomonedas</b>
+              <p>Se aceptan pagos y transferencia en cryptos.</p>
+                  </div>
+                  </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="flush-headingTwo">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                  <i class="bi bi-people-fill"></i>
+                    Profes y Guias
+                  </button>
+                </h2>
+                <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                  <div class="accordion-body"><b>Mauricio Calderon</b> 
+                      <p>Guia principal, será nuestro guia y profe principal de todas las salidas que se realicen, con más de 20 años de experiencias e incontables hazañas realizadas como montañista y deportista.</p>
+                  <b>Ana Laura Arevalo</b>
+                      <p>Profe de yoga y aromaterapia, en compañia del Profe Mauricio. Será nuestra carta de paz para encontrarnos a nosotros mismos.</p>
+                  <b>Ilan Zeimer</b>
+                  <p>Profe de expediciones a alta montaña junto al profe Mauricio, Ilan es nacido en Israel y criado en Estados Unidos, parte de su amor a la montaña se lo debe a nuestra hermosa provincia.</p>
+                  <b>¿Quien es Mariano Galvan?</b>
+                  <p>Mariano fue un profe, amigo y sobretodo el 2do Argentino en escalar el Monte Everest. Tratando de escalar los 14 ochomiles, falleció en el intento de escalar el Nanga Parbat (8,126m). Con amor lo recordamos sus amigos, en especial el profe Mauricio Calderon, que fue con ellos dos que empezo Vencedores De Peros en 2006 <form action="https://youtu.be/DJ4zasosJZw" target="_BLANK"><button>Aquí +</button></form></p></div>
                 </div>
-                <div class="box">
-                    <h2>SIGUENOS</h2>
-                    <div class="red-social">
-                        <a href="#" class="fa fa-facebook"></a>
-                        <a href="#" class="fa fa-instagram"></a>
-                        <a href="#" class="fa fa-twitter"></a>
-                        <a href="#" class="fa fa-youtube"></a>
-                    </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="flush-headingThree">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                      <i class="bi bi-geo-alt-fill"></i>
+                    Lugares de reunión
+                  </button>
+                </h2>
+                <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                  <div class="accordion-body">
+                      <b>Lugar de reuniones disponibles</b>
+                      <p>Generalmente esto lo deciden los mismos guías para facilitarle el viaje a algunas personas, puede ser tanto en ciudad de Mendoza, en Lujan de Cuyo o hasta en Potrerillos (Lugar donde se encuentran la mayoria de montañas)</p>
+                  </div>
                 </div>
+              </div>
+              <div class="accordion-item">
+                  <h2 class="accordion-header" id="flush-headingFour">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
+                      <i class="bi bi-people"></i>
+                      Edades disponibles
+                    </button>
+                  </h2>
+                  <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">
+                      <b>Trekking</b>
+                      <p>El trekking es una actividad para todas las edades, generalmente son salidas a la montaña para disfrutar las vistas, el camino y el paisaje.</p>
+                      <b>Alta Montaña</b>
+                      <p>Las salidas a alta montaña solo estan disponibles para edades entre 18 a 65 años. Son salidas bastantes complicadas, con guiadas individuales y especializadas por nuestros profes.</p>
+                      <b>Rafting, Bunjee, y Escalada</b>
+                      <p>Estas actividades son para personas entre 16 a 45, se necesita bastante esfuerzo fisico y no se recomienda para personas con patologias.</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="flush-headingFive">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
+                      <i class="bi bi-chat-dots-fill"></i>
+                      ¿Que Debo Llevar?
+                    </button>
+                  </h2>
+                  <div id="flush-collapseFive" class="accordion-collapse collapse" aria-labelledby="flush-headingFive" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">
+                      <b>Objetos</b>
+                      <p><ul>
+                          <li>Mochila de montaña</li>
+                          <li>Navaja</li>
+                          <li>Soga</li>
+                          <li>Botiquin</li>
+                          <li>Bastones de montaña</li>
+                          </ul>
+                       </p>
+                      <b>Comida para llevar</b>
+                      <p>
+                          <ul>
+                              <li>Sanguches</li>
+                              <li>Frutos secos</li>
+                              <li>Comidas de digestion rapida</li>
+                              <li>Dulces y chocolates</li>
+                          </ul>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+  </section>
+</main>
+</div>
+<footer class="pie-pagina">
+        <div class="grupo-2">
+            <div class="box">
+                <h2>VENCEDORES DE PEROS</h2>
+                <p>Todos los derechos reservados a Mauricio Enrique Calderon Marzan y Ana Laura Arevalo, fundadores de Vencedores De Peros en 2006, en memoria del ex-guía fallecido, Mariano Galvan.</p>
             </div>
+        </div>
+        <div class="box">
+            <h2>SIGUENOS</h2>
+            <div class="red-social">
+                <a href="#" class="fa fa-facebook"></a>
+                <a href="#" class="fa fa-instagram"></a>
+                <a href="#" class="fa fa-twitter"></a>
+                <a href="#" class="fa fa-youtube"></a>
             </div>
-            <div class="grupo-2">
-                <small>&copy;2023 <b>VencedoresDePeros</b> - Todos los derechos reservados</small>
-            </div>
-         </footer>
-</body>
+        </div>
+    </div>
+    </div>
+    <div class="grupo-2">
+        <small>&copy;2023 <b>VencedoresDePeros</b> - Todos los derechos reservados</small>
+    </div>
+ </footer>
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+  </body>
 </html>
